crates/aiken-lang/src/parser/expr/when/snapshots/when_guard_deprecation.snap
---
source: crates/aiken-lang/src/parser/expr/when/mod.rs
description: "Invalid code (parse error):\n\nwhen a is {\n  2 if x > 1 -> 3\n  _ -> 1\n}\n"
---
I found a now-deprecated clause guard in a when/is expression.
